src/objects/Department_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Department Line Items</relationshipLabel>
        <relationshipName>Department_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Product</label>
        <referenceTo>Opportunity_Product__c</referenceTo>
        <relationshipLabel>Department Line Items</relationshipLabel>
        <relationshipName>Department_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Department Line Item</label>
    <nameField>
        <label>Department Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Department Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>